# seck

./: .gitignore  Cargo.toml  LICENSE-BSD-3-CLAUSE  README.md  SECURITY.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  crypto-audit.yml  macos.yml  proof.yml  release.yml  repro.yml  trace-vs-model.yml  windows.yml
crates/seck-audit/: Cargo.toml
crates/seck-audit/src/: chain.rs  lib.rs  record.rs  verify.rs
crates/seck-audit/tests/: chain.rs
crates/seck-bench/: Cargo.toml
crates/seck-bench/src/: lib.rs  render.rs  runner.rs  scorer.rs
crates/seck-canaries/: Cargo.toml
crates/seck-canaries/src/: lib.rs
crates/seck-cli/: Cargo.toml
crates/seck-cli/src/: audit.rs  lib.rs  main.rs  mcp.rs  models.rs  pair.rs  tui.rs  verify_proof.rs  web.rs
crates/seck-cli/tests/: diff_modes.rs
crates/seck-crypto/: Cargo.toml
crates/seck-crypto/src/: device_key.rs  fips.rs  hash.rs  kdf.rs  kem.rs  lib.rs  sign.rs  sym.rs
crates/seck-fd/: Cargo.toml
crates/seck-fd/src/: lib.rs
crates/seck-host/: Cargo.toml
crates/seck-host-net/: Cargo.toml
crates/seck-host-net/src/: download.rs  lib.rs  pin.rs
crates/seck-host-unsafe/: Cargo.toml
crates/seck-host-unsafe/src/: lib.rs  linux.rs  macos.rs  stub.rs  windows_stub.rs
crates/seck-host/src/: fileset.rs  lib.rs  orchestrator.rs  orchestrator_windows.rs  walker.rs
crates/seck-host/tests/: proptest_paths.rs
crates/seck-infer/: Cargo.toml
crates/seck-infer/src/: lib.rs  llama_cpp.rs  mlx.rs  ollama.rs  stub.rs
crates/seck-mcp/: Cargo.toml
crates/seck-mcp/src/: lib.rs  server.rs  store.rs
crates/seck-mcp/tests/: dispatch.rs
crates/seck-mem-hard/: Cargo.toml
crates/seck-mem-hard/src/: lib.rs
crates/seck-models/: Cargo.toml
crates/seck-models/src/: entry.rs  lib.rs  manifest.rs  recommend.rs  store.rs  verify.rs
crates/seck-pair/: Cargo.toml
crates/seck-pair/src/: lib.rs  pairing.rs  qr.rs  wg.rs
crates/seck-pipeline/: Cargo.toml
crates/seck-pipeline/src/: analyst.rs  auditor.rs  judge.rs  lib.rs  seed.rs
crates/seck-plugin/: Cargo.toml
crates/seck-plugin/src/: lib.rs
crates/seck-portal/: Cargo.toml
crates/seck-portal/src/: main.rs
crates/seck-proto/: Cargo.toml
crates/seck-proto/src/: lib.rs
crates/seck-reader/: Cargo.toml
crates/seck-reader-ipc/: Cargo.toml
crates/seck-reader-ipc/src/: lib.rs
crates/seck-reader-priv/: Cargo.toml
crates/seck-reader-priv/src/: main.rs
crates/seck-reader/src/: lib.rs  main.rs  prompt.rs  protocol.rs
crates/seck-release-sign/: Cargo.toml
crates/seck-release-sign/examples/: gen_release_key.rs
crates/seck-release-sign/src/: main.rs
crates/seck-report/: Cargo.toml
crates/seck-report/src/: lib.rs  renderer.rs  sanitize.rs  schema.rs
crates/seck-sandbox/: Cargo.toml
crates/seck-sandbox/src/: container.rs  lib.rs  linux.rs  macos.rs  stub.rs  windows.rs
crates/seck-taint/: Cargo.toml
crates/seck-taint/src/: lib.rs
crates/seck-trace-check/: Cargo.toml
crates/seck-trace-check/src/: checker.rs  lib.rs  strace_parse.rs
crates/seck-trace-check/tests/: check.rs
crates/seck-tui/: Cargo.toml
crates/seck-tui/src/: lib.rs
crates/seck-verify-release/: Cargo.toml
crates/seck-verify-release/src/: main.rs
crates/seck-web/: Cargo.toml
crates/seck-web/src/: bind.rs  headers.rs  lib.rs  render.rs  token.rs
crates/seck-web/tests/: web.rs
docs/: AUDIT_LOG.md  RELEASE_KEY.md  THREAT_MODEL.md
docs/superpowers/plans/: 2026-05-20-seck-01-core-verified-io-boundary.md  2026-05-20-seck-02-macos-seatbelt-applet.md  2026-05-20-seck-03-container-sandbox.md  2026-05-20-seck-04-capability-split.md  2026-05-20-seck-05-lean-io-boundary-proof.md  2026-05-20-seck-06-three-pass-analyst-auditor-judge.md  2026-05-20-seck-07-pq-crypto-audit-log.md  2026-05-20-seck-08-ollama-mlx-backends.md  (+9 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: prompt_assembler.rs  protocol_parser.rs  report_sanitizer.rs  trace_invariant.rs
platform/container/: Dockerfile  build.sh
platform/linux/: landlock.toml  seccomp.bpf.toml
platform/macos/: seatbelt.sb
platform/manifests/: models.manifest.toml
platform/windows/: Seck.psm1
proof/: CORRESPONDENCE.md  Seck.lean  lakefile.toml
proof/Seck/: Basic.lean  Checker.lean  Correspondence.lean  Effects.lean  HostModel.lean  IOBoundary.lean  Origin.lean  ReaderModel.lean
schemas/: seck-report.schema.json
scripts/: audit-no-sha2.sh  check-approach-b-invariant.sh  check-net-quarantine.sh  install.sh  trace_audit.sh
scripts/alpine/: APKBUILD
scripts/aur/: PKGBUILD
scripts/brew/: seck.rb
scripts/debian/: control
scripts/rpm/: seck.spec
scripts/void/: template
tests/compile-fail/: Cargo.toml
tests/compile-fail/cases/: nested_tainted_into_args.rs  nested_tainted_into_args.stderr  sandbox_fd_tag_mismatch.rs  sandbox_fd_tag_mismatch.stderr  sink_token_field_private.rs  sink_token_field_private.stderr  tainted_as_ref_str.rs  tainted_as_ref_str.stderr  tainted_borrowed_into_arg.rs  tainted_borrowed_into_arg.stderr  tainted_eprintln.rs  tainted_eprintln.stderr  tainted_into_command_arg.rs  tainted_into_command_arg.stderr  tainted_into_cow.rs  tainted_into_cow.stderr  tainted_into_display.rs  tainted_into_display.stderr  tainted_into_env.rs  tainted_into_env.stderr  tainted_into_file_open.rs  tainted_into_file_open.stderr  tainted_into_format_debug.rs  tainted_into_format_debug.stderr  tainted_into_os_string.rs  tainted_into_os_string.stderr  tainted_into_path_buf.rs  tainted_into_path_buf.stderr  tainted_into_remove_file.rs  tainted_into_remove_file.stderr  tainted_into_string.rs  tainted_into_string.stderr  tainted_into_tcp_connect.rs  tainted_into_tcp_connect.stderr  tainted_println.rs  tainted_println.stderr  tainted_through_box_debug.rs  tainted_through_box_debug.stderr  tainted_to_socket_addrs.rs  tainted_to_socket_addrs.stderr
tests/compile-fail/tests/: compile_fail.rs
tests/escape/: Cargo.toml
tests/escape-macos/: Cargo.toml
tests/escape-macos/tests/: escape.rs
tests/escape-windows/: Cargo.toml
tests/integration/: Cargo.toml
tests/pair/: Cargo.toml
tests/pipeline/: Cargo.toml
(+50 files in other folders)
