[workspace]
# Resolver 3 has a known interaction with reqwest 0.12's private
# `__`-prefixed features under --locked + restrictive RUSTFLAGS on
# Linux: the chained activation through `__tls` → `dep:rustls-pki-types`
# is sometimes dropped, producing E0463 on rustls_pki_types inside
# reqwest's own source. Resolver 2's looser unification activates the
# whole chain reliably. We don't otherwise need resolver-3 semantics.
resolver = "2"
members = [
    "crates/seck-taint",
    "crates/seck-fd",
    "crates/seck-plugin",
    "crates/seck-proto",
    "crates/seck-sandbox",
    "crates/seck-host-unsafe",
    "crates/seck-host",
    "crates/seck-reader",
    "crates/seck-infer",
    "crates/seck-report",
    "crates/seck-cli",
    "crates/seck-crypto",
    "crates/seck-audit",
    "crates/seck-mem-hard",
    "crates/seck-models",
    "crates/seck-host-net",
    "crates/seck-pipeline",
    "crates/seck-canaries",
    "crates/seck-mcp",
    "crates/seck-web",
    "crates/seck-tui",
    "crates/seck-bench",
    "crates/seck-portal",
    "crates/seck-release-sign",
    "crates/seck-verify-release",
    "crates/seck-reader-ipc",
    "crates/seck-reader-priv",
    "crates/seck-trace-check",
    "crates/seck-pair",
]
exclude = ["fuzz", "tests/compile-fail", "tests/escape", "tests/escape-macos", "tests/escape-windows", "tests/integration", "tests/pipeline", "tests/pair"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
# Workspace default is BSD-3-Clause so library crates can be freely
# reused by other security projects. The four user-facing application
# crates — seck-cli, seck-reader, seck-reader-priv, seck-pipeline —
# override this with `license = "AGPL-3.0-or-later"` in their own
# Cargo.toml. SaaS-prevention is preserved for the end-user product;
# the building blocks (typestate, sandbox, crypto, audit log, etc.)
# are permissive.
license = "BSD-3-Clause"
authors = ["pq-cybarg <resistant@tuta.com>"]

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
non_ascii_idents = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
# rustdoc treats ` + ` (and any of `+`/`-`/`*`) at a doc-comment line
# start as a markdown bullet, even when the prose author meant "and".
# We have lots of "foo + bar + baz" prose in our sandbox / crypto
# docs. Allowing this lint repo-wide avoids prose-shape gymnastics.
doc_lazy_continuation = "allow"

[workspace.dependencies]
nix = { version = "0.30", features = ["fs", "process", "user", "sched", "signal", "ioctl", "mman", "term", "socket"] }
sha3 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
subtle = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.34"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = { version = "0.9", features = ["std_rng", "os_rng"] }
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "fs", "net", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1"
trybuild = "1"
assert_cmd = "2"
predicates = "3"
libc = "0.2"

# Reproducible-release profile (Plan 15 / repro.yml). Strip + lto +
# codegen-units=1 + debuginfo=0 here, NOT via RUSTFLAGS, so they apply
# per-artifact (final bins get stripped; library rlibs keep their symbol
# tables so dep-of-dep linkage still resolves).
[profile.release]
codegen-units = 1
debug = 0
strip = "symbols"
opt-level = 3
lto = false
