[package]
name = "seck-bench"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-plugin = { path = "../seck-plugin" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = "0.8"
walkdir = "2"
anyhow.workspace = true
thiserror.workspace = true
html-escape = "0.2"

[dev-dependencies]
tempfile = "3"
