[package]
name = "seck-canaries"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-crypto = { path = "../seck-crypto" }
hex.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
