[package]
name = "seck-cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "seck"
path = "src/main.rs"

[dependencies]
seck-host = { path = "../seck-host" }
seck-report = { path = "../seck-report" }
seck-crypto = { path = "../seck-crypto" }
seck-audit = { path = "../seck-audit" }
seck-models = { path = "../seck-models" }
seck-host-net = { path = "../seck-host-net" }
seck-mcp = { path = "../seck-mcp" }
seck-web = { path = "../seck-web" }
seck-tui = { path = "../seck-tui" }
tokio.workspace = true
clap = { version = "4", features = ["derive", "env"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
hex.workspace = true
rand.workspace = true
xdg = "2"
rpassword = "7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
