[package]
name = "seck-crypto"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
sha3.workspace = true
zeroize.workspace = true
subtle.workspace = true
hex.workspace = true
thiserror.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
# Post-quantum signature schemes from the pqclean family.
pqcrypto-sphincsplus = "0.7"
pqcrypto-mldsa = "0.1"
pqcrypto-mlkem = "0.1"
pqcrypto-traits = "0.3"
# Memory-hard KDF.
argon2 = "0.5"
# Symmetric AEAD ciphers.
aes-gcm-siv = "0.11"
chacha20poly1305 = "0.10"
