[package]
name = "seck-fd"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-taint = { path = "../seck-taint" }
thiserror.workspace = true

# Crate body is `#![cfg(unix)]`; nix only exists on unix.
[target.'cfg(unix)'.dependencies]
nix.workspace = true
