[package]
name = "seck-host-net"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-crypto = { path = "../seck-crypto" }
# Use native-tls (system OpenSSL on Linux, SecureChannel on macOS,
# SChannel on Windows) instead of rustls. Reqwest 0.12 + resolver-3
# has a known issue where the rustls-tls feature chain depends on
# `__`-prefixed private features that resolver-3 sometimes refuses to
# propagate across the dep chain, leading to E0463 'can't find crate
# for rustls_pki_types' inside reqwest's own source on Linux under
# --locked. native-tls is unaffected, and the seck-host-net download
# path only needs HTTPS to public model mirrors — either backend is
# equivalent for that use case.
reqwest = { version = "0.12", default-features = false, features = [
    "default-tls",
    "blocking",
] }
sha3.workspace = true
hex.workspace = true
thiserror.workspace = true
url = "2"
tempfile = "3"
