[package]
name = "seck-host-net"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-crypto = { path = "../seck-crypto" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
sha3.workspace = true
hex.workspace = true
thiserror.workspace = true
url = "2"
tempfile = "3"
