[package]
name = "seck-host-unsafe"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints.rust]
unsafe_code = "allow"   # this is the audited unsafe layer; deliberately permissive

[lints.clippy]
all = "deny"

[dependencies]
libc.workspace = true
thiserror.workspace = true
nix.workspace = true

[dev-dependencies]
tempfile = "3"
