[package]
name = "seck-host"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-taint = { path = "../seck-taint" }
seck-plugin = { path = "../seck-plugin" }
seck-proto = { path = "../seck-proto" }
seck-sandbox = { path = "../seck-sandbox" }
sha3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
zeroize.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rand.workspace = true
hex.workspace = true

[target.'cfg(unix)'.dependencies]
seck-fd = { path = "../seck-fd" }
seck-host-unsafe = { path = "../seck-host-unsafe" }
nix.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
