[package]
name = "seck-host"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-taint = { path = "../seck-taint" }
seck-fd = { path = "../seck-fd" }
seck-host-unsafe = { path = "../seck-host-unsafe" }
seck-plugin = { path = "../seck-plugin" }
seck-proto = { path = "../seck-proto" }
seck-sandbox = { path = "../seck-sandbox" }
nix.workspace = true
sha3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
zeroize.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rand.workspace = true
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
