[package]
name = "seck-infer"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[features]
default = []
llama-cpp = []

[lints]
workspace = true

[dependencies]
seck-plugin = { path = "../seck-plugin" }
sha3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
hex.workspace = true
