[package]
name = "seck-infer"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[features]
default = []
llama-cpp = []
# Ollama backend over a pre-opened Unix-domain socket.
ollama = []
# MLX backend (Apple Silicon only); spawns a separate Swift runner binary.
mlx = []

[lints]
workspace = true

[dependencies]
seck-plugin = { path = "../seck-plugin" }
sha3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
