[package]
name = "seck-mcp"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-report = { path = "../seck-report" }
seck-crypto = { path = "../seck-crypto" }
seck-models = { path = "../seck-models" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
