[package]
name = "seck-pipeline"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
# Three-pass analyst/auditor/judge orchestrator — AGPL preserves SaaS-prevention.
license = "AGPL-3.0-or-later"
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-plugin = { path = "../seck-plugin" }
seck-crypto = { path = "../seck-crypto" }
sha3.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
