[package]
name = "seck-plugin"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-taint = { path = "../seck-taint" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
