[package]
name = "seck-portal"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "seck-portal"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
seck-host-unsafe = { path = "../seck-host-unsafe" }
nix.workspace = true
libc.workspace = true
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
