[package]
name = "seck-reader"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
# User-facing in-sandbox reader process — AGPL preserves SaaS-prevention.
license = "AGPL-3.0-or-later"
authors.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "seck-reader"
path = "src/main.rs"

[dependencies]
seck-plugin = { path = "../seck-plugin" }
seck-proto = { path = "../seck-proto" }
seck-sandbox = { path = "../seck-sandbox" }
seck-infer = { path = "../seck-infer" }
seck-reader-ipc = { path = "../seck-reader-ipc" }
sha3.workspace = true
hex.workspace = true
base64 = "0.22"
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
rand.workspace = true

[dev-dependencies]
base64 = "0.22"
