[package]
name = "seck-report"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-taint = { path = "../seck-taint" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
jsonschema.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
