[package]
name = "seck-sandbox"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-plugin = { path = "../seck-plugin" }
sha3.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true
landlock = "0.4"
seccompiler = "0.5"
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Isolation",
    "Win32_Security_Authorization",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
] }
