[package]
name = "seck-tui"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
seck-report = { path = "../seck-report" }
ratatui = "0.30"
crossterm = "0.29"
anyhow.workspace = true
serde_json.workspace = true
